k8s/local/ns-contract-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-contract-service
  labels:
    app: ns-contract-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ns-contract-service
  template:
    metadata:
      labels:
        app: ns-contract-service
    spec:
      containers:
        - name: ns-contract-service
          image: local/ns-contract-service:latest
          imagePullPolicy: IfNotPresent   # Prevents pulling from remote if image exists locally
          ports:
            - containerPort: 3000
