k8s/local/ns-contract-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-contract-service
spec:
  selector:
    app: ns-contract-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
